[package]
name = "tactile-tesla"
version = "0.1.0"
authors = ["Shaun Keys <mariobuddy@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.1", features = [ "esp32" ] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
log = { version = "0.4.22" }
esp-alloc = { version = "0.5.0" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.10.1", features = [
    "esp32",
    "wifi",
    "esp-now",
] }
heapless = { version = "0.8.0", default-features = false }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "bincode_derive", "derive"] }
adafruit-7segment = { version = "0.1.0", default-features = false }
ht16k33 = { version = "0.4.0", default-features = false }
thiserror = { version = "2.0.1", default-features = false }

[build-dependencies]
rand = "0.8.5"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
lto = 'fat'
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
